--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -38,6 +38,8 @@ C-p = ["move_line_up","scroll_up"]
 C-n = ["move_line_down","scroll_down"]
 esc = ["collapse_selection","keep_primary_selection"]
 C-x = ["extend_line_below", "trim_selections", "change_selection"]
+C-j = ["extend_to_line_bounds", "delete_selection", "paste_after"]
+C-k = ["extend_to_line_bounds", "delete_selection", "move_line_up", "paste_before"]
 C-s = ":w" 
 
 [keys.insert]
