--- a/psql/.psqlrc
+++ b/psql/.psqlrc
@@ -1,7 +1,7 @@
 \set PROMPT1 '%~%#%x '
 \x auto
 \set ON_ERROR_STOP on
-\set ON_ERROR_ROLLBACK interactive
+-- \set ON_ERROR_ROLLBACK interactive
 \set HISTFILE ~/.psql_history-:DBNAME
 
 \set VERBOSITY verbose
@@ -17,4 +17,3 @@
 set intervalstyle to 'postgres_verbose'
 
 \setenv LESS '-iMFXSx4R'
-\setenv EDITOR '/Applications/Emacs.app/Contents/MacOS/bin/emacsclient -nw'
